start/Intro to Lists/fix01/t1.txt
  File "fixup.py", line 1
    items = ['water', 1; 'food']
                       ^
SyntaxError: invalid syntax
